tests/fixtures/errors/call_bad_arg.full
error[E0300]: unknown argument 'b'
 --> call_bad_arg.z:4:12
   4 |     f a: 1 b: 2
     |            ^
     = hint: did you mean 'a'?
1 error found
